<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/myrefreshbutton"
        android:title=""
        app:showAsAction="always"
        android:icon="@mipmap/baseline_cached_white_24"
        />
</menu>