<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="200dp">
    <com.jenway.slidenewslist.ui.HorizontalRecyclerView
        android:id="@+id/horizontal_rv_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        />
</LinearLayout>